[package]
name = "stonescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
eyre = "0.6.8"
lazy_static = "1.4.0"
semver = "1.0.20"
serde = { version = "1.0.189", features = ["derive"] }
thiserror = "1.0.50"
toml = "0.8.2"
unicode-ident = "1.0.12"
